added link to recipe

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>Recipes</title>
 </head>
+
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/bolognese.html">Bolognese Spaghetti Recipe</a>
 </body>
 
 </html>
