--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-    <h1>Bolognese Recipe</h1>
+    <h1>Bolognese Spaghetti Recipe</h1>
+    <a href="../index.html">Home</a>
 </body>
 
 </html>
