--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -7,7 +7,29 @@
 
 <body>
     <h1>Bolognese Spaghetti Recipe</h1>
-    <a href="../index.html">Home</a>
+       <img src="../img/spaghetti-bolognese.jpeg" alt="a picture of a bowl of spaghetti" height="800">
+    <h2>Spaghetti Bolognese</h2>
+        <p>This is the best Spaghetti Bolognese recipe ever.</p>
+    <h3>Ingredients</h3>
+        <ul>
+            <li>500g Fresh Beef Mince</li>
+            <li>400g Dried Spaghetti</li>
+            <li>4 Rashers of Smoked Streaky Bacon</li>
+            <li>2 Tins of Plum/Chopped Tomatoes</li>
+            <li>6 Fresh Cherry Tomatoes</li>
+            <li>2 Medium Onions</li>
+            <li>2 Sticks of Celery</li>
+            <li>2 Carrots</li>
+            <li>2 Cloves of Garlic</li>
+            <li>1 Medium Chilli</li>
+            <li>2 tbsp Tomato Puree</li>
+            <li>1 Beef Stock Cube</li>
+            <li>Glass of red wine</li>
+
+
+        </ul>
+
+    <p><a href="../index.html">Home</a></p>
 </body>
 
 </html>
