Added Steps list

--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -25,9 +25,37 @@
             <li>2 tbsp Tomato Puree</li>
             <li>1 Beef Stock Cube</li>
             <li>Glass of red wine</li>
+         </ul>
+    <h3>Steps</h3>
+         <ol>
+            <li><p>Get yourself a large heavy-bottomed saucepan, and place it on a medium heat.<br>
+                Add a good lug of olive oil and gently fry your bacon until golden and crisp,<br>
+                then reduce the heat slightly and add your onions, carrots, celery and garlic.<br>
+                Next remove the leaves from the Rosemary sprigs and add them to the pot,<br>
+                discarding the sprigs. Move everything around and fry for around 8-10 minutes<br>
+                until the veg has softened.</p>
+                </li>
+                
+            <li><p>Next, increase the heat slightly, add the mince and stir until the meat is<br>
+                browned all over.</p></li>
+            
+            <li><p>Stir in your tins of plum/chopped tomatoes, (plum tomatoes are best as they<br>
+                 contain less water, but either will turn out great!). Add your remaining herbs,<br>
+                 tomato puree, stock cube, chilli and if using, the wine. Slice your cherry<br>
+                 tomatoes in half and throw them in as well.</p></li>
+            <li><p>Give everything a stir with a wooden spoon, breaking up the plum tomatoes as<br>
+                 you go and bring to a gentle simmer. Reduce the heat to low-medium, put the<br> 
+                 lid on and leave it blipping away for about an hour and 15 minutes until<br>
+                 the flavours develop into a wonderfully rich tomatoey sauce. Stir occasionally to<br>
+                 make sure it doesn't catch.</p></li>
 
-
-        </ul>
+            <li><p>Just as the sauce is nearly ready, Add the parmesan and season to taste.<br>
+                 Meanwhile add salt to a pan of boiling water and cook the spaghetti according<br>
+                 the the packet instructions. Once the spaghetti is ready, drain it in a colander<br>
+                 and add it to the pan with the sauce. Give it all a good stir, coating the pasta in<br>
+                 the lovely tomato sauce. Serve with a little grated parmesan and use the extra<br>
+                 basil leaves to make a great little garnish. Beautiful!</p></li>
+         </ol>
 
     <p><a href="../index.html">Home</a></p>
 </body>
