--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/bolognese.html">Bolognese Spaghetti Recipe</a>
+    <ul>
+    <li><a href="recipes/bolognese.html">Bolognese Spaghetti Recipe</a></li>
+    <li><a href="recipes/applepie.html">Apple Pie</a></li>
+    <li><a href="recipes/goulash.html">Goulash</a> </li>
+
+    </ul>
 </body>
 
 </html>
