Added content to apple pie recipe
Image, headings, Lists.

--- a/recipes/applepie.html
+++ b/recipes/applepie.html
@@ -7,5 +7,50 @@
 
 <body>
     <h1>Apple Pie</h1>
+       <img src="../img/applepie.jpeg" alt="Picture of an apple pie" height="500">
+    <h2>Apple Pie</h2>
+        <p>My favorite dessert for every occasion</p>
+    <h3>Ingredients</h3>
+        <ul>
+            <li>8 small Granny Smith apples, or as needed</li>
+            <li>½ cup unsalted butter</li>
+            <li>3 tablespoons all-purpose flour</li>
+            <li>½ cup white sugar</li>
+            <li>½ cup packed brown sugar</li>
+            <li>¼ cup water</li>
+            <li>1 (9 inch) double-crust pie pastry, thawed</li>
+        </ul>
+
+        <h3>Steps</h3>
+
+        <ol>
+            <li>Gather the ingredients. Preheat the oven to 425 degrees F (220 degrees C). Peel<br>
+                and core apples, then thinly slice. Set aside.</li>
+            <li>Melt butter in a saucepan over medium heat. Add flour and stir to form a paste;<br>
+                cook until fragrant, about 1 to 2 minutes. Add both sugars and water; bring to a<br>
+                boil. Reduce the heat to low and simmer for 3 to 5 minutes. Remove from the heat.</li>
+            <li>Press one pastry into the bottom and up the sides of a 9-inch pie pan. Roll out<br>
+                remaining pastry so it will overhang the pie by about 1/2 inch. Cut pastry into<br>
+                eight 1-inch strips.</li>
+            <li>Place sliced apples into the bottom crust, forming a slight mound. Lay four<br> 
+                pastry strips vertically and evenly spaced over apples, using longer strips in the<br>
+                center and shorter strips at the edges.</li>
+            <li>Make a lattice crust: Fold the first and third strips all the way back so they're<br>
+                almost falling off the pie. Lay one of the unused strips perpendicularly over the|<br>
+                second and fourth strips, then unfold the first and third strips back into their<br>
+                original position.</li>
+            <li>Fold the second and fourth vertical strips back. Lay one of the three unused<br>
+                strips perpendicularly over top. Unfold the second and fourth strips back into<br>
+                their original position. Repeat Steps 6 and 7 to weave in the last two strips of<br>
+                pastry. Fold and trim excess dough at the edges as necessary, and pinch to secure.</li>
+            <li>Slowly and gently pour sugar-butter mixture over lattice crust, making sure it<br>
+                seeps over sliced apples. Brush some onto lattice, but make sure it doesn't run<br>
+                off the sides.</li>
+            <li>Bake in the preheated oven for 15 minutes. Reduce the temperature to 350 degrees F<br>
+                (175 degrees C) and continue baking until apples are soft, 35 to 45 minutes.</li>
+         </ol>
+
+    <p><a href="../index.html">Home</a> </p>
+
 </body>
 </html>
