Added image of Goulash

--- a/recipes/goulash.html
+++ b/recipes/goulash.html
@@ -7,5 +7,6 @@
 
 <body>
     <h1>Goulash</h1>
+        <img src="../img/Goulash.jpeg" alt="Some delicious looking goulash" height="500">
 </body>
 </html>
