--- a/recipes/goulash.html
+++ b/recipes/goulash.html
@@ -13,32 +13,49 @@
             Unsurprising given it is Hungary&#39;s greatest food export!</p>
     <h3>Ingredients</h3>
         <ul>
-            <li><h4>Beef, spices and sauce</h4>
+            <li><b>Beef, spices and sauce</b>
                 <ul>
-                    <li><p>Beef: The classic beef cut to use is beef chuck which is a tough cut of<br>
+                    <li><p><b>Beef:</b> The classic beef cut to use is beef chuck which is a tough cut of<br>
                         meat that becomes meltingly tender when slow cooked. If you can, get a<br>
                         single piece so you can cut it into cubes of the size we want, else get a<br>
                         thick steak. Always look for beef that is nicely marbled with fat. All too<br>
                         often, the grocery stores ones are disturbingly lean. We want the fat<br>
                         marbled throughout, it makes the beef so tender and juicy!</p></li>
-                    <li><p>Paprika: Use Hungarian or Hungarian-style if you can, the paprika is<br>
+                    <li><p><b>Paprika:</b> Use Hungarian or Hungarian-style if you can, the paprika is<br>
                         smoother and sweeter than ordinary paprika. Don&#39;t use hot paprika &#8722;<br>
                         we&#39;re using lots of paprika here, it will be way too spicy! Smoked paprika<br>
                         will make the sauce a little too smokey, though you could mix-and-match<br>
                         a little if you want.</p></li>
-                    <li><p>Caraway seeds: A traditional spice used in Goulash used in central<br>
+                    <li><p><b>Caraway seeds:</b> A traditional spice used in Goulash used in central<br>
                         European cooking. Not the end of the world if you don&#39;t have it but you&#39;ll<br>
                         love the little unique pops of flavour if you do!</p></li>
-                    <li><p>Beef stock/broth: The liquid used to make the sauce. Traditionally<br>
+                    <li><p><b>Beef stock/broth:</b> The liquid used to make the sauce. Traditionally<br>
                         water was used, but no one can deny that using stock makes the sauce a<br>
                         whole lot tastier! I personally would not make this with water. If you use<br>
                         homemade beef stock, you could sell bowls of this for a pretty penny.</p></li>
-                    <li><p>Butter and oil: The fat for sautéing. I like to use both so you get the best<br>
+                    <li><p><b>Butter and oil:</b> The fat for sautéing. I like to use both so you get the best<br>
                         of both worlds &#8722; butter for flavour, oil for effective searing (butter is ~15%<br>
                         water and susceptible to burning at high heats).</p></li>
-                    <li><p>Bay leaf: For flavour. Fresh if you can, or dried (pictured).</p></li>
+                    <li><p><b>Bay leaf:</b> For flavour. Fresh if you can, or dried.</p></li>
+                 </ul>
+            </li>
+
+             <li><b>The vegetables</b>
+                <ul>
+                    <li><p><b>Onion and garlic:</b> flavour base</p></li>
+                    <li><p><b>Capsicum/bell peppers:</b> One each red and yellow if you can, or 2 red.<br>
+                        Don&#39;t underestimate the flavour this brings to the sauce! You can<br>
+                        substitute the potato and carrot but don&#39;t skip capsicum!</p></li>
+                    <li><p><b>Tomatoes:</b> These break down to naturally thicken the sauce rather than<br>
+                        using flour.</p></li>
+                    <li><p><b>Carrot and potato:</b> Vegetable adds ins that fills it out. Feel free to switch<br>
+                         with other root vegetables such as celeriac, parsnip, or even non-root<br>
+                         vegetables like green beans. Note: These get added at the end of the<br>
+                        cook time so the potato doesn&#39;t disintegrate.</p></li>
+                    <li><p><b>Parsley:</b> optional garnish</p></li>
                 </ul>
             </li>
+
 
 
 
