--- a/recipes/goulash.html
+++ b/recipes/goulash.html
@@ -55,10 +55,22 @@
                     <li><p><b>Parsley:</b> optional garnish</p></li>
                 </ul>
             </li>
-
-
-
-
         </ul>
+        
+    <h3>Steps</h3>
+        <ul>
+            <li><p>Cut beef into nice size chunks then sprinkle with salt and pepper</p></li>
+            <li><p>Cook onion first for 6 minutes until the edges are light golden.</p></li>
+            <li><p>Cook beef: Next, add the beef all in one go and stir until the surfaces<br>
+                changes from red to brown. You won&#39;t be browning on the beef because<br>
+                there&#39;s too much in the pot and that&#39;s just how it&#39;s supposed to be. All the<br>
+                flavours meld and come together in the next steps!</p></li>
+            <li><p>Add garlic, capsicum and tomato. Stir for 3 minutes to coat the<br>
+                vegetables in all the flavour in the pot. The tomato will mostly breakdown –<br>
+                it will break down completing during the slow cooking phase and thicken<br>
+                the sauce.</p></li>
+        </ul>
+
+    <a href="../index.html">Home</a>
 </body>
 </html>
