--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-    <li><a href="recipes/bolognese.html">Bolognese Spaghetti Recipe</a></li>
+    <img src="./img/restaurant.jpeg" alt="picture of a restaurant" width="400">
+    <h2>My favorite recipes</h2>
+
+    <ul class="nav">
+    <li><a href="recipes/bolognese.html">Bolognese Spaghetti</a></li>
     <li><a href="recipes/applepie.html">Apple Pie</a></li>
     <li><a href="recipes/goulash.html">Goulash</a> </li>
-
     </ul>
 </body>
 
