--- a/recipes/goulash.html
+++ b/recipes/goulash.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Goulash</title>
+    <link rel="stylesheet" href="goulash.css">
 </head>
 
 <body>
     <h1>Goulash</h1>
         <img src="../img/goulash.jpeg" alt="Some delicious looking goulash" height="500">
     <h2>Hungarian Goulash (beef stew-soup)</h2>
-        <p>If you think of Hungary, then Goulash is probably exactly what comes to mind.<br>
+        <p class="dis">If you think of Hungary, then Goulash is probably exactly what comes to mind.<br>
             Unsurprising given it is Hungary&#39;s greatest food export!</p>
     <h3>Ingredients</h3>
+        <div class="menu">
         <ul>
             <li><strong>Beef, spices and sauce</strong>
                 <ul>
@@ -39,6 +41,7 @@
                     <li><p><strong>Bay leaf:</strong> For flavour. Fresh if you can, or dried.</p></li>
                  </ul>
             </li>
+            
 
              <li><strong>The vegetables</strong>
                 <ul>
@@ -56,8 +59,10 @@
                 </ul>
             </li>
         </ul>
+        </div>
         
     <h3>Steps</h3>
+        <div class="menu">
         <ul>
             <li><p>Cut beef into nice size chunks then sprinkle with salt and pepper</p></li>
             <li><p>Cook onion first for 6 minutes until the edges are light golden.</p></li>
@@ -70,6 +75,7 @@
                 it will break down completing during the slow cooking phase and thicken<br>
                 the sauce.</p></li>
         </ul>
+        </div>
 
     <a href="../index.html">Home</a>
 </body>
