Add style to applepie

--- a/recipes/applepie.html
+++ b/recipes/applepie.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Apple Pie</title>
+    <link rel="stylesheet" href="applepie.css">
 </head>
 
 <body>
     <h1>Apple Pie</h1>
        <img src="../img/applepie.jpeg" alt="Picture of an apple pie" height="500">
-    <h2>Apple Pie</h2>
-        <p>My favorite dessert for every occasion</p>
+    <h2>Apple Pie by Grandma Ople</h2>
+        <p class="dis">This amazing apple pie recipe belonged to my grandmother. I have never seen<br>
+            another one quite like it! It will always be my favorite and has won several first<br>
+            place prizes in local competitions. It makes the perfect dessert for family dinners<br>
+            or during the holidays.</p>
     <h3>Ingredients</h3>
+        <div class="menu">
         <ul>
             <li>8 small Granny Smith apples, or as needed</li>
             <li>½ cup unsalted butter</li>
@@ -20,9 +25,10 @@
             <li>¼ cup water</li>
             <li>1 (9 inch) double-crust pie pastry, thawed</li>
         </ul>
+        </div>
 
         <h3>Steps</h3>
-
+        <div class="menu">
         <ol>
             <li>Gather the ingredients. Preheat the oven to 425 degrees F (220 degrees C). Peel<br>
                 and core apples, then thinly slice. Set aside.</li>
@@ -49,8 +55,8 @@
             <li>Bake in the preheated oven for 15 minutes. Reduce the temperature to 350 degrees F<br>
                 (175 degrees C) and continue baking until apples are soft, 35 to 45 minutes.</li>
          </ol>
-
-    <p><a href="../index.html">Home</a> </p>
+         </div>
+    <button><a href="../index.html">Home</a></button>
 
 </body>
 </html>
