Add style to bolognese

--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Bolognese</title>
+    <link rel="stylesheet" href="bolognese.css">
 </head>
 
 <body>
     <h1>Bolognese Spaghetti Recipe</h1>
-       <img src="../img/spaghetti-bolognese.jpeg" alt="a picture of a bowl of spaghetti" height="800">
-    <h2>Spaghetti Bolognese</h2>
-        <p>This is the best Spaghetti Bolognese recipe ever.</p>
+       <img src="../img/spaghetti-bolognese.jpeg" alt="a picture of a bowl of spaghetti" width="350">
+    <h2>Mom's Spaghetti Bolognese</h2>
+        <p class="dis">Mom's spaghetti Bolognese recipe was passed on from my Italian grandfather.<br>
+            The ultimate comfort food. Leftovers freeze nicely! To make this recipe more<br>
+            authentic, you can use a mixture of ground veal, pork, and beef. You can also<br>
+            substitute 1/2 cup of red wine for the balsamic vinegar.</p>
     <h3>Ingredients</h3>
+            <div class="menu">
         <ul>
             <li>500g Fresh Beef Mince</li>
             <li>400g Dried Spaghetti</li>
@@ -26,7 +31,9 @@
             <li>1 Beef Stock Cube</li>
             <li>Glass of red wine</li>
          </ul>
+            </div>
     <h3>Steps</h3>
+            <div class="menu">
          <ol>
             <li><p>Get yourself a large heavy-bottomed saucepan, and place it on a medium heat.<br>
                 Add a good lug of olive oil and gently fry your bacon until golden and crisp,<br>
@@ -56,8 +63,8 @@
                  the lovely tomato sauce. Serve with a little grated parmesan and use the extra<br>
                  basil leaves to make a great little garnish. Beautiful!</p></li>
          </ol>
-
-    <p><a href="../index.html">Home</a></p>
+            </div>
+    <button><a href="../index.html">Home</a></button>
 </body>
 
 </html>
