--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <div class="card">
+    <div class="title"><h1>Odin Recipes</h1></div>
     <img src="./img/restaurant.jpeg" alt="picture of a restaurant" width="400">
-    <h2>My favorite recipes</h2>
-
+    <div class="sub"><h2>My favorite recipes</h2></div>
+    </div>
+    <div class="back">
     <ul class="nav">
     <li><a href="recipes/bolognese.html">Bolognese Spaghetti</a></li>
     <li><a href="recipes/applepie.html">Apple Pie</a></li>
     <li><a href="recipes/goulash.html">Goulash</a> </li>
     </ul>
+    </div>
 </body>
 
 </html>
